# moai-llm

./: .gitignore  OPTIMIZATION_APPLIED.md  README.md  TOKENIZATION_OPTIMIZATION.md  chat.py  check_dataset.py  optimize_env.sh  pretokenize.py  pretrain.sh  pretrain_cont.sh  pyproject.toml  quick_test.py  requirements.txt  setup_rust_tokenizer.sh  test_import.py  test_inference.py  test_moai_mamba.py  test_moai_tokenizer.py  test_tokenizer.py  test_tokenizer_speed.py  test_tokenizer_speed_v2.py  tokenize_datasets.py  tokenize_rust_wrapper.py  train.py  train_tokenizer.py  verify_optimization.py
cache/: download_cache.sh
configs/: mamba_config_16b.json  mamba_config_2b.json  mamba_config_8b.json  model_config.json  model_config_16b.json  model_config_2b.json  training_config.yaml
docs/: ARCHITECTURE.md  DATASETS.md  DATASET_OPTIMIZATION.md  MAMBA_GLM_README.md  QUICKSTART.md  TOKENIZER_UPDATE_GUIDE.md  USER_GUIDE.md
examples/: basic_training.ipynb  basic_usage.ipynb  bccard_example.md  bccard_tutorial.md  sample_sft_alpaca.json  sample_sft_chat.json  sample_sft_sharegpt.json  test_sft_conversion.sh
moai_llm/: __init__.py  config.py  inference.py  losses.py
moai_llm/modeling/: __init__.py  activations.py  advanced_quantization.py  attention.py  moai_mamba.py  model.py  normalization.py  quantization.py  rope.py  ssm.py  ssm_config.py  transformer.py
moai_llm/modeling/legacy_transformer/: __init__.py  attention.py  decoder.py  model.py
moai_llm/tokenizer/: __init__.py
scripts/: evaluate.py  generate_mamba.py  pretrain.py  test_mamba.py  train_mamba.py  train_moai_mamba.py  train_tokenizer.py
tests/: test_model.py
tokenize_rust/: Cargo.toml  README.md  build.sh  setup.sh
tokenize_rust/src/: main.rs
tokenizers/: moai_kor_eng.json
tokenizers/moai/: tokenizer_config.json
tokenizers/moai_kor_eng/: tokenizer.json
tokenizers/moai_multilingual/: special_tokens_map.json
