[package]
name = "moai-tokenizer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
arrow = { version = "53", features = ["prettyprint"] }
parquet = { version = "53", features = ["arrow"] }
anyhow = "1.0"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
